--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=master --cleanup"
   },
   "dependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
@@ -15,5 +16,8 @@
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.12",
     "sass-loader": "^9.0.3"
+  },
+  "devDependencies": {
+    "push-dir": "^0.4.1"
   }
 }
